--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -5,10 +5,10 @@
   gather_facts: no
   tasks:
     - name: Import VPC setup Variable
-      include_vars: vars/bastion_setup
+      include_vars: vars/vpc_setup
 
     - name: Import VPC setup Variable
-      include_vars: vars/output_vars
+      include_vars: vars/vpc-output_vars
 
     - name: Create vprofile ec2 key
       ec2_key:
@@ -57,3 +57,12 @@
         group_id: "{{BastionSG_out.group_id}}"
         vpc_subnet_id: "{{pubsub1id}}"
       register: bastionHost_out
+
+    - name: Insert/Update "BastionSGid" in vars/vpc-output_vars
+      blockinfile:
+        path: vars/vpc-output_vars
+        backup: yes
+        block: |
+          BastionSGid: {{BastionSG_out.group_id}}
+
+
